kubernetes/kafka-connect/deployment.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: kafka-connect
spec:
  selector:
    matchLabels:
      app: kafka-connect
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      containers:
      - name: kafka-connect
        image: 921942764047.dkr.ecr.us-east-1.amazonaws.com/kafka-connect:$CODEBUILD_RESOLVED_SOURCE_VERSION
        ports:
        - containerPort: 8083
      "imagePullSecrets": [
        {
          "name": "aws-ecr-credentials"
        }
      ]
