kubernetes/kafka-connect/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kafka-connect-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kafka-connect
          servicePort: 8083
